doc: update install doc.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "a",
+  "name": "confism-element",
   "version": "0.1.0",
-  "private": true,
+  "main": "src/index.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "start": "vue-cli-service serve",
